k8s/2-postgresdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  selector:
    matchLabels:
      app: postgres-pod
  template:
    metadata:
      labels:
        app: postgres-pod
    spec:
#      initContainers:
#        - name: fix-permissions
#          image: busybox
#          command:
#            - "sh"
#            - "-c"
#            - "mkdir -p /var/lib/postgresql/data/pgdata && chmod -R 777 /var/lib/postgresql/data"
#          volumeMounts:
#            - name: postgres-storage
#              mountPath: /var/lib/postgresql/data
      containers:
        - name: postgres
          image: "postgres:14-alpine"
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
